tests/ui/pattern/usefulness/issue-30240-b.stderr
error: unreachable pattern
  --> $DIR/issue-30240-b.rs:12:9
   |
LL |         "hello" => {}
   |         ^^^^^^^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/issue-30240-b.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

